--- a/react/.env
+++ b/react/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres.pdgaikntpahughbxijur:VHokrTfFNerWKf3M@aws-0-us-east-1.pooler.supabase.com:6543/postgres"
+DATABASE_URL="postgresql://postgres:vWFjsr82L9Z6mmPL@db.lvsgczplwyqiclvhhxwp.supabase.co:5432/postgres"
+NEXTAUTH_SECRET="dsadsadad"
