--- a/react/.env
+++ b/react/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:vWFjsr82L9Z6mmPL@db.lvsgczplwyqiclvhhxwp.supabase.co:5432/postgres"
-NEXTAUTH_SECRET="dsadsadad"
+NEXTAUTH_SECRET="5fy2ddOFVyUSBzIPlMS3"
