--- a/react/.env
+++ b/react/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:vWFjsr82L9Z6mmPL@db.lvsgczplwyqiclvhhxwp.supabase.co:5432/postgres"
+DATABASE_URL="postgres://postgres.lvsgczplwyqiclvhhxwp:vWFjsr82L9Z6mmPL@aws-0-us-west-1.pooler.supabase.com:6543/postgres"
 NEXTAUTH_SECRET="5fy2ddOFVyUSBzIPlMS3"
