--- a/react/.env
+++ b/react/.env
@@ -4,5 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres.lvsgczplwyqiclvhhxwp:vWFjsr82L9Z6mmPL@aws-0-us-west-1.pooler.supabase.com:6543/postgres"
+DATABASE_URL="postgres://postgres.jvrzvotllicwrrgtbgzr:k20vOJ7QB2d6F1HV@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 NEXTAUTH_SECRET="5fy2ddOFVyUSBzIPlMS3"
+
+
