--- a/react/.env
+++ b/react/.env
@@ -4,7 +4,14 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# Created by Vercel CLI
+# Created by Vercel CLI
 DATABASE_URL="postgres://postgres.jvrzvotllicwrrgtbgzr:k20vOJ7QB2d6F1HV@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 NEXTAUTH_SECRET="5fy2ddOFVyUSBzIPlMS3"
-
+VERCEL="1"
+VERCEL_ENV="development"
+NEXT_PUBLIC_APP_ID="1749250"
+NEXT_PUBLIC_PUSHER_KEY="2dbe80aadf1ff824391d"
+NEXT_PUBLIC_PUSHER_SECRET="1358e670af34f159331f"
+CLUSTER="us2"
 
