--- a/react/package.json
+++ b/react/package.json
@@ -15,6 +15,8 @@
     "bcrypt": "^5.1.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
