--- a/react/.env
+++ b/react/.env
@@ -10,8 +10,8 @@ DATABASE_URL="postgres://postgres.jvrzvotllicwrrgtbgzr:k20vOJ7QB2d6F1HV@aws-0-us
 NEXTAUTH_SECRET="5fy2ddOFVyUSBzIPlMS3"
 VERCEL="1"
 VERCEL_ENV="development"
-NEXT_PUBLIC_APP_ID="1749250"
+APP_ID="1749250"
 NEXT_PUBLIC_PUSHER_KEY="2dbe80aadf1ff824391d"
-NEXT_PUBLIC_PUSHER_SECRET="1358e670af34f159331f"
+PUSHER_SECRET="1358e670af34f159331f"
 CLUSTER="us2"
 
