--- a/react/.env
+++ b/react/.env
@@ -1,17 +1,14 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 # Created by Vercel CLI
-# Created by Vercel CLI
+CLUSTER="us2"
 DATABASE_URL="postgres://postgres.jvrzvotllicwrrgtbgzr:k20vOJ7QB2d6F1HV@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 NEXTAUTH_SECRET="5fy2ddOFVyUSBzIPlMS3"
+NEXT_PUBLIC_APP_ID="1749250"
+GITHUB_ID="f18e7fb359e2f41eb9d1"
+GITHUB_SECRET="4d59f65e0261990d3b3326acc1c49e0e98d49918"
+NX_DAEMON=""
+PUSHER_KEY="2dbe80aadf1ff824391d"
+PUSHER_SECRET="1358e670af34f159331f"
+TURBO_REMOTE_ONLY=""
+TURBO_RUN_SUMMARY=""
 VERCEL="1"
 VERCEL_ENV="development"
-APP_ID="1749250"
-NEXT_PUBLIC_PUSHER_KEY="2dbe80aadf1ff824391d"
-PUSHER_SECRET="1358e670af34f159331f"
-CLUSTER="us2"
-
