--- a/react/package.json
+++ b/react/package.json
@@ -10,8 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
-    "@prisma/client": "^5.8.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.9.1",
     "bcrypt": "^5.1.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
@@ -30,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "prisma": "^5.9.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
