--- a/react/.env
+++ b/react/.env
@@ -1,6 +1,6 @@
 # Created by Vercel CLI
 CLUSTER="us2"
-DATABASE_URL="postgres://postgres.jvrzvotllicwrrgtbgzr:k20vOJ7QB2d6F1HV@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DATABASE_URL="postgres://postgres.yqybgiuzltcjdggprrer:3tWAB79GZaPrEZDZ@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
 NEXTAUTH_SECRET="5fy2ddOFVyUSBzIPlMS3"
 NEXT_PUBLIC_APP_ID="1749250"
 GITHUB_ID="f18e7fb359e2f41eb9d1"
