--- a/react/.env
+++ b/react/.env
@@ -2,13 +2,10 @@
 CLUSTER="us2"
 DATABASE_URL="postgres://postgres.yqybgiuzltcjdggprrer:3tWAB79GZaPrEZDZ@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
 NEXTAUTH_SECRET="5fy2ddOFVyUSBzIPlMS3"
-NEXT_PUBLIC_APP_ID="1749250"
+PUSHER_APP_ID="1749250"
 GITHUB_ID="f18e7fb359e2f41eb9d1"
 GITHUB_SECRET="4d59f65e0261990d3b3326acc1c49e0e98d49918"
-NX_DAEMON=""
-PUSHER_KEY="2dbe80aadf1ff824391d"
-PUSHER_SECRET="1358e670af34f159331f"
-TURBO_REMOTE_ONLY=""
-TURBO_RUN_SUMMARY=""
+NEXT_PUBLIC_PUSHER_KEY="319dc4f784f758243a6f"
+PUSHER_SECRET="6c703d96269675f952f0"
 VERCEL="1"
 VERCEL_ENV="development"
