--- a/react/.env
+++ b/react/.env
@@ -1,6 +1,6 @@
 # Created by Vercel CLI
 CLUSTER="us2"
-DATABASE_URL="postgres://postgres.yqybgiuzltcjdggprrer:3tWAB79GZaPrEZDZ@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgres://postgres.yqybgiuzltcjdggprrer:3tWAB79GZaPrEZDZ@aws-0-us-west-1.pooler.supabase.com:5432/postgres?pgbouncer=true"
 NEXTAUTH_SECRET="5fy2ddOFVyUSBzIPlMS3"
 PUSHER_APP_ID="1749250"
 GITHUB_ID="f18e7fb359e2f41eb9d1"
