--- a/react/.env
+++ b/react/.env
@@ -1,11 +1,11 @@
 # Created by Vercel CLI
-CLUSTER="us2"
-DATABASE_URL="postgresql://postgres.mccflcnwnrqmstdilsve:LNriTJV3OZiaZHlv@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
-NEXTAUTH_SECRET="5fy2ddOFVyUSBzIPlMS3"
-PUSHER_APP_ID="1749250"
-GITHUB_ID="f18e7fb359e2f41eb9d1"
-GITHUB_SECRET="4d59f65e0261990d3b3326acc1c49e0e98d49918"
-NEXT_PUBLIC_PUSHER_KEY="319dc4f784f758243a6f"
-PUSHER_SECRET="6c703d96269675f952f0"
-VERCEL="1"
+CLUSTER=""
+DATABASE_URL=""
+NEXTAUTH_SECRET=""
+PUSHER_APP_ID=""
+GITHUB_ID=""
+GITHUB_SECRET=""
+NEXT_PUBLIC_PUSHER_KEY=""
+PUSHER_SECRET=""
+VERCEL=""
 VERCEL_ENV="development"
